# stretch_pro_config

./: .gitattributes  .gitignore  .gitmodules  README.md
src/stretch_pro_config/: CMakeLists.txt
src/stretch_re1_pro_config/: CMakeLists.txt  package.xml
src/stretch_re1_pro_config/config/: config.yaml
src/stretch_re1_pro_config/config/control/: stretch.ros2_control.yaml
src/stretch_re1_pro_config/config/moveit/: joint_limits.yaml  moveit_simple_controller_manager.yaml  ompl_planning.yaml  stretch_servo.yaml
src/stretch_re1_pro_config/description/: gripper.ros2_control.xacro  stretch.xacro  stretch_base.ros2_control.xacro
src/stretch_re1_pro_config/launch/sim/: robot_drivers_to_persist_sim.launch.py
src/stretch_re1_pro_config/meshes/coffee_shop/: coffee_shop.dae
src/stretch_re1_pro_config/objectives/: move_to_joint_state.xml  move_to_pose.xml  request_teleoperation.xml  teleoperate.xml
src/stretch_re1_pro_config/scripts/: repub_odometry_mdof_joint_states.py
src/stretch_re1_pro_config/waypoints/: stretch_waypoints.yaml
